omni/tests/goldens/types/unknown_type_12.err
tests/goldens/types/unknown_type_12.omni:1:13: error: unknown type "Mystery12"
     1 | let value12:Mystery12 = 1
       |             ^^^^^^^^^
     2 | 
  hint: import or declare the type before use

tests/goldens/types/unknown_type_12.omni:1:1: error: type mismatch: cannot assign int to Mystery12
     1 | let value12:Mystery12 = 1
       | ^^^^^^^^^^^^^^^^^^^^^^^^^
     2 | 
  hint: convert the expression to Mystery12 or change the variable type to int
