omni/tests/goldens/types/unknown_type_12.omni
let value12:Mystery12 = 1
